k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiodeskription
  namespace: audiodeskription
  labels:
    app.kubernetes.io/name: audiodeskription
    app.kubernetes.io/component: webapp
spec:
  type: ClusterIP
  selector:
    app: audiodeskription
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
